2007-11-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-initWithCoder:): Correct keyed decoding of
	setSendsActionOnEndEditing. 
	* Source/tiff.m: Change mode field of chandle_t to char.
	Bugs reported by gcc 4.2
	
2007-11-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.0

2007-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:role:): Add
	fallback for missing standard fonts.

2007-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m,
	* Source/NSMenuItem.m (-initWithCoder:, -encodeWithCoder:): Better
	support for keyed encoding (Tag, separator,...).

2007-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m (+initialize): Create titleCell here to have
	it available for browsers loaded from Gorm files.
	* Source/NSBrowser.m (GSBrowserTitleCell): Add method
	drawingRectForBounds: and correct drawWithFrame:inView:.
	* Source/NSBrowser.m (-displayAllColumns, -displayColumn:): Mark
	for redraw. 
	
2007-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-draggingUpdated:): Use
	currentDropOperation instead of NSTableViewDropAbove.
	* Source/NSDocument.m (-windowForSheet): Return nil instead of
	mainWindow, when there is no associated window.
	Patches by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-10-30  Adam Fedor  <fedor@gnu.org>

        * gnustep-gui.spec.in: Change Copyright to License.

2007-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* COPYING: Add GPL file.
	* Change all files to use GPL 3 and LGPL 3.
	* Prepare for next release.
	
2007-10-28 01:44-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: reverted change to validateEditing to 
	correct crashes.  

2007-10-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableHeaderView.m (-drawRect:): Switch drawing cases for 
	flipping. 
	* Source/NSTableView.m (GSTableCornerView): Made flipped and
	adjust drawing code.

2007-10-11 Fred Kiefer <FredKiefer@gmx.de>
